--- a/dealer.mobiva/dealer.mobiva.csproj
+++ b/dealer.mobiva/dealer.mobiva.csproj
@@ -6849,6 +6849,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\DealerSelection.cshtml" />
     <Content Include="Views\Settings\ProductBrands.cshtml" />
+    <Content Include="Views\Settings\ProductBrandEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
