--- a/dealer.mobiva/dealer.mobiva.csproj
+++ b/dealer.mobiva/dealer.mobiva.csproj
@@ -5803,6 +5803,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CustomerOrdersController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -6861,6 +6862,8 @@
     <Content Include="Views\ToDos\ToDoEdit.cshtml" />
     <Content Include="Views\Customers\CustomerEdit.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\CustomerOrders\Index.cshtml" />
+    <Content Include="Views\CustomerOrders\CustomerOrderEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
