--- a/dealer.mobiva/dealer.mobiva.csproj
+++ b/dealer.mobiva/dealer.mobiva.csproj
@@ -6864,6 +6864,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\CustomerOrders\Index.cshtml" />
     <Content Include="Views\CustomerOrders\CustomerOrderEdit.cshtml" />
+    <Content Include="Views\Inventory\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -6920,7 +6921,6 @@
     <Folder Include="Content\src\scss\plugins\menu\mmenu\extensions\borderstyle\" />
     <Folder Include="Content\src\scss\plugins\menu\mmenu\extensions\justifiedlistview\" />
     <Folder Include="Content\src\scss\plugins\menu\mmenu\extensions\positioning\" />
-    <Folder Include="Views\Inventory\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Content\app-assets\vendors\js\editors\tinymce\themes\mobile\demo\ts\demo\Demo.ts" />
