--- a/dealer.mobiva/dealer.mobiva.csproj
+++ b/dealer.mobiva/dealer.mobiva.csproj
@@ -6865,6 +6865,7 @@
     <Content Include="Views\CustomerOrders\Index.cshtml" />
     <Content Include="Views\CustomerOrders\CustomerOrderEdit.cshtml" />
     <Content Include="Views\Inventory\Index.cshtml" />
+    <Content Include="Views\Inventory\ProductEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
